templates/rdf-streaming-updater_template.yaml
---
# Source: rdf-streaming-updater/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rdf-streaming-updater-release-name-taskmanager
  labels:
    app: rdf-streaming-updater
    chart: rdf-streaming-updater-0.0.7
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: rdf-streaming-updater-taskmanager
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: rdf-streaming-updater-jobmanager
            release: release-name
      ports:
        - port: 6122
          protocol: TCP
        - port: 6125
          protocol: TCP
    - ports:
      # flink's native prometheus endpoint
      - port: 9102
        protocol: TCP
---
# Source: rdf-streaming-updater/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rdf-streaming-updater-release-name-jobmanager
  labels:
    app: rdf-streaming-updater
    chart: rdf-streaming-updater-0.0.7
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: rdf-streaming-updater-jobmanager
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: rdf-streaming-updater-taskmanager
            release: release-name
      ports:
        - port: 6123
          protocol: TCP
        - port: 6124
          protocol: TCP
    - ports:
      # flink's native prometheus endpoint
      - port: 9102
        protocol: TCP
---
# Source: rdf-streaming-updater/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdf-streaming-updater-release-name-ui
  labels:
    app: rdf-streaming-updater
    chart: rdf-streaming-updater-0.0.7
    release: release-name
    heritage: Helm
    component: jobmanager-ui
spec:
  type: NodePort
  ports:
  - name: webui
    port: 8081
  selector:
    app: rdf-streaming-updater-jobmanager
    release: release-name
    component: jobmanager
---
# Source: rdf-streaming-updater/templates/jobmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdf-streaming-updater-release-name-jobmanager
  labels:
    app: rdf-streaming-updater-jobmanager
    chart: rdf-streaming-updater-0.0.7
    release: release-name
    heritage: Helm
    component: jobmanager
spec:
  selector:
    matchLabels:
      app: rdf-streaming-updater-jobmanager
      release: release-name
      component: jobmanager
  replicas: 1
  template:
    metadata:
      labels:
        app: rdf-streaming-updater-jobmanager
        component: jobmanager
        release: release-name
      annotations:
        checksum/secrets: 9faef7806cf6b7cbc2666f4661060c8b32127aa34f81837c679f8b1e2483e7de
        checksum/log4j-conf: 8ca715a710b9f7d425c13f5f8e714cb3e5468e72b28fd98f118e20bd15118be3
        checksum/flink-conf: ad4671a6625742ac938b2353d47146c138d55e8dfe887395de3fad6e5d8b2024
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      serviceAccountName: rdf-streaming-updater-release-name
      containers:
        # The main application container
        - name: rdf-streaming-updater-release-name-jobmanager
          image: "docker-registry.wikimedia.org/wikimedia/wikidata-query-flink-rdf-streaming-updater:latest"
          imagePullPolicy: IfNotPresent
          command: ["/opt/flink/bin/jobmanager.sh", "start-foreground", "$(POD_IP)"]
          ports:
            - containerPort: 6123
              name: rpc
            - containerPort: 6124
              name: blob-server
            - containerPort: 8081
              name: webui
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            tcpSocket:
              port: 6123
          resources:
            requests:
              cpu: 100m
              memory: 700Mi
            limits:
              cpu: 200m
              memory: 800Mi
          volumeMounts:
          - name: flink-config-volume
            mountPath: /opt/flink/conf        
      volumes:        
        - name: flink-config-volume
          configMap:
            name: rdf-streaming-updater-release-name-flink-config
            items:
            - key: flink-conf.yaml
              path: flink-conf.yaml
            - key: log4j-console.properties
              path: log4j-console.properties
---
# Source: rdf-streaming-updater/templates/taskmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdf-streaming-updater-release-name-taskmanager
  labels:
    app: rdf-streaming-updater-taskmanager
    chart: rdf-streaming-updater-0.0.7
    release: release-name
    heritage: Helm
    component: taskmanager
spec:
  selector:
    matchLabels:
      app: rdf-streaming-updater-taskmanager
      release: release-name
      component: taskmanager
  replicas: 1
  template:
    metadata:
      labels:
        app: rdf-streaming-updater-taskmanager
        component: taskmanager
        release: release-name
      annotations:
        checksum/secrets: 9faef7806cf6b7cbc2666f4661060c8b32127aa34f81837c679f8b1e2483e7de
        checksum/log4j-conf: 8ca715a710b9f7d425c13f5f8e714cb3e5468e72b28fd98f118e20bd15118be3
        checksum/flink-conf: ad4671a6625742ac938b2353d47146c138d55e8dfe887395de3fad6e5d8b2024
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      serviceAccountName: rdf-streaming-updater-release-name
      containers:
        # The main application container
        - name: rdf-streaming-updater-release-name-taskmanager
          image: "docker-registry.wikimedia.org/wikimedia/wikidata-query-flink-rdf-streaming-updater:latest"
          imagePullPolicy: IfNotPresent
          command: ["/opt/flink/bin/taskmanager.sh", "start-foreground"]
          ports:
            - containerPort: 6122
              name: rpc
            - containerPort: 6125
              name: query-state
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            tcpSocket:
              port: 6122
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
            limits:
              cpu: 200m
              memory: 1100Mi
          volumeMounts:
          - name: flink-config-volume
            mountPath: /opt/flink/conf        
      volumes:        
        - name: flink-config-volume
          configMap:
            name: rdf-streaming-updater-release-name-flink-config
            items:
            - key: flink-conf.yaml
              path: flink-conf.yaml
            - key: log4j-console.properties
              path: log4j-console.properties
---
# Source: rdf-streaming-updater/templates/tests/curl-ui.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'rdf-streaming-updater-release-name-curl-ui'
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
  - name: 'rdf-streaming-updater-release-name-curl-ui'
    image: "docker-registry.wikimedia.org/wmfdebug"
    imagePullPolicy: IfNotPresent
    args: ["curl", "http://rdf-streaming-updater-release-name-ui:8081"]
  dnsPolicy: ClusterFirst
  restartPolicy: Never
